# pcd-project

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
docs/: programming-guidelines.md  project-structure.md
src/c-admin-client/: .c-admin-client.c.swp  c-admin-client.c  client.c
src/c-client/: c-client.c  c-client.h
src/client/: Makefile  client  client.c  client.h  client.py  client2.py  ffmpeg_commands.c  ffmpeg_commands.h  menu.c  menu.h  py-client.py
src/common/: protocol.h  utils.c  utils.h
src/py-client/: client.py
src/server/: .admin_handler.c.swp  Makefile  admin_handler.c  admin_handler.h  client_thread.c  hashmap.c  job_handler.c  job_handler.h  log_queue.c  log_queue.h  minheap.c  processing.c  processing.h  server  server.c  server.h  upload_handler.c  upload_handler.h  upload_thread.c
src/shared/: common.h  protocol.h
